<resources>
    <string name="app_name">Arcore-measure</string>
    <string name="dialogTitle1">Saved Records</string>
    <string name="dialogTitle2">Save Record</string>
    <string name="insertName">Insert name</string>
    <string name="SaveStr">Save</string>
    <string name="ExitStr">Exit</string>
    <string name="okStr">Ok</string>
    <string name="surfName">SurfaceName</string>
    <string name="surfValue">SurfaceValue</string>
    <string name="addNewValue">Add measurement</string>
    <string name="surface">x m²</string>
</resources>
